--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,22 +1,24 @@
 <section class="hero container">
   <h1 class="hero-title">
     <svg class="menu-button-icon" width="38" height="38">
-        <use href="./img/sprite.svg#hero-title"></use>
+      <use href="./img/sprite.svg#hero-title"></use>
     </svg>
-    Get <i>Body</i> in<br>shape, Stay healthy</h1>
-  <p class="hero-description">Transform your physique and embrace a healthier lifestyle with our comprehensive fitness and nutrition support.</p>
+    Get <i>Body</i> in<br />shape, Stay healthy
+  </h1>
+  <p class="hero-description">
+    Transform your physique and embrace a healthier lifestyle with our
+    comprehensive fitness and nutrition support.
+  </p>
   <div class="hero-main-image">
     <img
       srcset="
-                  ./img/hero/hero-main-image@1x.png 1x,
-                  ./img/hero/hero-main-image@2x.png 2x
-                "
+        ./img/hero/hero-main-image@1x.png 1x,
+        ./img/hero/hero-main-image@2x.png 2x
+      "
       src="./img/hero/hero-main-image@1x.png"
-
-
       alt="women-sportswear-working-out-outdoors"
       aria-label="women-sportswear-working-out-outdoors"
-    >
+    />
   </div>
   <div class="tags-container">
     <span class="tag">#Sport</span>
@@ -27,11 +29,11 @@
   <div class="hero-secondary-image">
     <img
       srcset="
-                  ./img/hero/hero-secondary-image@1x.png 1x,
-                  ./img/hero/hero-secondary-image@2x.png 2x
-                "
+        ./img/hero/hero-secondary-image@1x.png 1x,
+        ./img/hero/hero-secondary-image@2x.png 2x
+      "
       src="./img/hero/hero-secondary-image@1x.png"
       alt="young-women-doing-fitness-outdoors-together"
-    >
+    />
   </div>
 </section>
