--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         aria-label="YOUR ENERGY"
       >
         <svg width="132" height="24">
-          <use href="./img/header/icons.svg#logo"></use>
+          <use href="./img/logo.svg"></use>
         </svg>
       </a>
       <ul class="menu-items router">
@@ -57,7 +57,7 @@
           </a>
         </li>
       </ul>
-      <button type="button" class="menu-btn" onclick="openMenu()">
+      <button type="button" class="menu-btn" onclick="">
         <svg width="32" height="32">
           <use href="./img/header/icons.svg#menu"></use>
         </svg>
