work in progress

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,6 +12,7 @@
 @import './exercises.css';
 @import './hero.css';
 @import './favorites.css';
+@import './categories.css';
 @import url('./exercise-modal.css');
 @import url('./rating-modal.css');
 
