--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -2,6 +2,26 @@
   <div class="container exercises-container">
     <div class="exercises-cards">
       <!--Placeholder for exercises cards -->
+      <ul class="exercises-list">
+     
+    <li class="exercise-card">
+          <div class="exercise-header">
+          <span class="badge">Workout</span>
+          <span class="rating">4.5</span>
+          <a href="#" class="exercise-link">Start</a>
+        </div>
+        <div class="exercise-content">
+          <h3 class="exercise-title">Exercise Title</h3>
+          <span class="exercise-icon">icon</span>
+        </div>
+        <div class="exercise-footer">
+          <p>Burned calories:<span class="footer-tag">30 min</span> </p>
+          <p>Body part:<span class="footer-tag">Waist</span> </p>
+          <p>Target:<span class="footer-tag">Abs</span> </p>
+        </div>
+      </li>
+      </ul>
+     
     </div>
     <aside class="quote-container">
       <div class="box1-qoute">
