--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,7 @@
 @import './favorites.css';
 @import url('./exercise-modal.css');
 @import url('./rating-modal.css');
+@import url('./exercises-list.css');
 
 body {
   font-family: var(--main-font-family);
