--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -1,27 +1,32 @@
 <section class="section-exercises">
+  <div>
+  <div class="filters-title container">
+    <h2 class="section-title">Exercises</h2>
+    <div class="filters-container">
+      <select id="bodyPartSelect">
+        <option value="">Muscles</option>
+      </select>
+      
+      <select id="equipmentSelect">
+        <option value="">Body Part</option>
+      </select>
+      
+      <select id="musclesSelect">
+        <option value="">Equipment</option>
+        </select>
+    </div>
+  </div>
   <div class="container exercises-container">
     <div class="exercises-cards">
       <!--Placeholder for exercises cards -->
       <ul class="exercises-list">
-     
-    <li class="exercise-card">
-          <div class="exercise-header">
-          <span class="badge">Workout</span>
-          <span class="rating">4.5</span>
-          <button class="start-btn">Start ➤</button>
-        </div>
-        <div class="exercise-content">
-          <h3 class="exercise-title">Exercise Title</h3>
-          <span class="exercise-icon">icon</span>
-        </div>
-        <p class="exercise-meta">
-          Burned calories: <strong>312 / 3 min</strong><br />
-          Body part: <strong>Waist</strong><br />
-          Target: <strong>Abs</strong></p>
-      </li>
       </ul>
+       <div class="pagination">
      
+      </div>   
     </div>
+    
+
     <aside class="quote-container">
       <div class="box1-qoute">
         <svg width="34" height="32">
@@ -80,4 +85,5 @@
       </div>
     </aside>
   </div>
+</div>
 </section>
