--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -1,3 +1,34 @@
+.section-exercises{
+  padding-top: 48px;
+  padding-bottom: 48px;
+
+}
+.filters-title.container{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top:32px;
+  margin-bottom: 32px;
+  
+}  
+  .section-title {
+  font-family: var(--main-font-family);
+  font-weight: 400;
+  font-size: 44px;
+  line-height: 1.5px;
+  margin-bottom: 32px;
+}
+.filters-container {
+  select {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5
+  }
+}
+
+
+
 .quote-container {
   display: flex;
   flex-direction: column;
