--- a/src/css/exercises-list.css
+++ b/src/css/exercises-list.css
@@ -95,7 +95,13 @@
   margin-top: 20px;
 
   .page-item {
-    border: none;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 32px;
+    width: 32px;
+    border: 1px solid var(--primary);
     border-radius: 50%;
 
     margin: 0 5px;
