--- a/src/css/exercises-list.css
+++ b/src/css/exercises-list.css
@@ -104,7 +104,7 @@
     border: 1px solid var(--primary);
     border-radius: 50%;
 
-    margin: 0 5px;
+    margin: 0 8px;
     cursor: pointer;
     transition: var(--transition);
 
@@ -112,6 +112,10 @@
       background-color: var(--primary);
       color: var(--white)
     }
+  }
+  .page-item.active {
+    background-color: var(--primary);
+    color: var(--white);
   }
 }
 
