--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -58,7 +58,7 @@
 
                     <p class="footer-subscribe-text">Subscribe and learn about new exercises!</p>
 
-                    <form class="footer-form js-form">
+                    <form class="footer-form js-footer-form">
 
                         <input class="footer-input" pattern="^\w+(.\w+)?@[a-zA-Z_]+?.[a-zA-Z]{2,3}$" type="email"
                             name="email" placeholder="Email" required />
