--- a/src/css/filtered-exercises.css
+++ b/src/css/filtered-exercises.css
@@ -127,13 +127,22 @@
   }
 
   @media screen and (min-width: 768px) {
-    .filtered-exercises-list {
-      grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    .filtered-exercises-cards-wrapper .filtered-exercises-list {
+      grid-template-columns: repeat(auto-fill, minmax(344px, 1fr));
+      gap: 16px;
+      row-gap: 32px;
     }
   
+    .filtered-exercises-cards-wrapper .filtered-exercise-card {
+      padding: 16px 20px;
+    }
+    .filtered-exercises-cards-wrapper .filtered-exercise-card .exercise-content {
+      margin-bottom: 8px;
 
-    .filtered-exercise-card {
-      padding: 16px;
+    }
+
+    .filtered-exercises-cards-wrapper .filtered-exercise-card .exercise-content .exercise-title {
+      font-size: 24px;
     }
   
     .filtered-pagination {
@@ -146,12 +155,12 @@
       height: 28px;
       font-size: 18px;
     }
-    
   }
 
   @media screen and (min-width:1440px) {
-    .filtered-exercises-list {
-      grid-template-columns: repeat(auto-fill, minmax(442px, 1fr));
+    .filtered-exercises-cards-wrapper {
+      .filtered-exercises-list {
+        grid-template-columns: repeat(auto-fill, minmax(442px, 1fr));
     }
   
     .filtered-exercise-card {
@@ -209,3 +218,4 @@
   .exercises-container{
     background: pink;
   }
+}
