--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,12 +11,12 @@
           <use href="./img/logo.svg"></use>
         </svg>
       </a>
-      <ul class="menu-items router">
-        <li class="menu-item active">
-          <a href="./index.html">Home</a>
+      <ul class="menu-items">
+        <li class="menu-item">
+          <a href="./index.html" class="menu-item-link">Home</a>
         </li>
         <li class="menu-item">
-          <a href="./favorites.html">Favorites</a>
+          <a href="./favorites.html" class="menu-item-link">Favorites</a>
         </li>
       </ul>
       <ul class="socials">
@@ -64,4 +64,5 @@
       </button>
     </nav>
   </div>
+  <script type="module" src="../js/listeners/header-listener.js"></script>
 </header>
