--- a/src/partials/categories.html
+++ b/src/partials/categories.html
@@ -8,7 +8,6 @@
       <button class="category">Equipment</button>
     </div>
 
-    <div class="categories__list">
-    </div>
+    <div class="categories__list"></div>
   </div>
 </section>
