--- a/src/css/categories.css
+++ b/src/css/categories.css
@@ -86,7 +86,11 @@
   width: 100%;
   height: 100%;
   padding: 20px;
-  background: linear-gradient(0deg, rgba(17, 17, 17, 0.50) 0%, rgba(17, 17, 17, 0.50) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(17, 17, 17, 0.5) 0%,
+    rgba(17, 17, 17, 0.5) 100%
+  );
   color: var(--white);
   display: flex;
   align-items: center;
@@ -146,12 +150,11 @@
 }
 
 .pagination__btn:hover:not(:disabled) {
-  border-color: rgba(36, 36, 36, 0.10);
+  border-color: rgba(36, 36, 36, 0.1);
   color: var(--primary-inactive);
 }
 
 .pagination__btn:disabled {
-
 }
 
 .pagination__pages {
