--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,12 +1,15 @@
 <section class="hero container">
   <h1 class="hero-title">
     <svg class="menu-button-icon" width="38" height="38">
-        <use href="./img/sprite.svg#hero-title"></use>
+      <use href="./img/sprite.svg#hero-title"></use>
     </svg>
-    <span class="line1">Get <i>Body</i> in</span><br>
+    <span class="line1">Get <i>Body</i> in</span><br />
     <span class="line2">shape, Stay healthy</span>
   </h1>
-  <p class="hero-description">Transform your physique and embrace a healthier lifestyle with our comprehensive fitness and nutrition support.</p>
+  <p class="hero-description">
+    Transform your physique and embrace a healthier lifestyle with our
+    comprehensive fitness and nutrition support.
+  </p>
   <div class="hero-main-image">
     <img
       srcset="
