--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -71,10 +71,8 @@
     </div>
     <!-- Filtered Exercises dont remove its hidden unless clicked -->
     <div class="filtered-exercises-cards-wrapper hide">
-      <ul class="filtered-exercises-list">
-      </ul>
-      <div class="filtered-pagination">
-      </div>
+      <ul class="filtered-exercises-list"></ul>
+      <div class="filtered-pagination"></div>
     </div>
     <!-- end Filtered exercises -->
   </div>
