--- a/src/partials/filtered-exercises.html
+++ b/src/partials/filtered-exercises.html
@@ -1,5 +1,4 @@
 <div class="filtered-exercises-cards-wrapper hide">
-    <ul class="filtered-exercises-list">
-    </ul>
-    <div class="filtered-pagination">
+  <ul class="filtered-exercises-list"></ul>
+  <div class="filtered-pagination"></div>
 </div>
