--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,6 +7,14 @@
             <use href="../img/sprite.svg#logo"></use>
           </svg>
         </a>
+  <div class="container footer-container">
+    <div class="footer-top">
+      <div class="footer-branding">
+        <a class="footer-logo" href="../index.html">
+          <svg class="footer-logo-icon" width="132" height="24">
+            <use href="../img/sprite.svg#logo"></use>
+          </svg>
+        </a>
 
         <ul class="footer-socials">
           <li class="footer-socials-item">
@@ -21,7 +29,32 @@
               </svg>
             </a>
           </li>
+        <ul class="footer-socials">
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link"
+              href="https://www.facebook.com/goITclub/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="../img/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
 
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link"
+              href="https://www.instagram.com/goitclub/"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="../img/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
           <li class="footer-socials-item">
             <a
               class="footer-socials-link"
@@ -49,7 +82,25 @@
           </li>
         </ul>
       </div>
+          <li class="footer-socials-item">
+            <a
+              class="footer-socials-link"
+              href="https://www.youtube.com/c/GoIT"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
+              <svg class="footer-social-icon" width="24" height="24">
+                <use href="../img/sprite.svg#icon-youtube"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
 
+      <div class="footer-headline-subscribe">
+        <p class="footer-headline">
+          Transforming your <em>body</em> shape with us
+        </p>
       <div class="footer-headline-subscribe">
         <p class="footer-headline">
           Transforming your <em>body</em> shape with us
@@ -60,7 +111,7 @@
             Subscribe and learn about new exercises!
           </p>
 
-          <form class="footer-form js-footer-form">
+          <form class="footer-form js-form">
             <input
               class="footer-input"
               pattern="^\w+(.\w+)?@[a-zA-Z_]+?.[a-zA-Z]{2,3}$"
@@ -75,19 +126,35 @@
         </div>
       </div>
     </div>
+            <button class="btn-subscribe" type="submit">Send</button>
+          </form>
+        </div>
+      </div>
+    </div>
 
+    <div class="footer-bottom">
+      <p>Your Energy. All rights reserved.</p>
     <div class="footer-bottom">
       <p>Your Energy. All rights reserved.</p>
 
       <div>
         <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+      <div>
+        <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
 
         <span>/</span>
+        <span>/</span>
 
+        <a href="#" target="_blank">Terms of Service</a>
+      </div>
         <a href="#" target="_blank">Terms of Service</a>
       </div>
 
       <p>©2023</p>
     </div>
   </div>
+      <p>©2023</p>
+    </div>
+  </div>
 </footer>
+
