--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -7,14 +7,6 @@
             <use href="../img/sprite.svg#logo"></use>
           </svg>
         </a>
-  <div class="container footer-container">
-    <div class="footer-top">
-      <div class="footer-branding">
-        <a class="footer-logo" href="../index.html">
-          <svg class="footer-logo-icon" width="132" height="24">
-            <use href="../img/sprite.svg#logo"></use>
-          </svg>
-        </a>
 
         <ul class="footer-socials">
           <li class="footer-socials-item">
@@ -29,20 +21,6 @@
               </svg>
             </a>
           </li>
-        <ul class="footer-socials">
-          <li class="footer-socials-item">
-            <a
-              class="footer-socials-link"
-              href="https://www.facebook.com/goITclub/"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="footer-social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-
           <li class="footer-socials-item">
             <a
               class="footer-socials-link"
@@ -58,33 +36,6 @@
           <li class="footer-socials-item">
             <a
               class="footer-socials-link"
-              href="https://www.instagram.com/goitclub/"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="footer-social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-
-          <li class="footer-socials-item">
-            <a
-              class="footer-socials-link"
-              href="https://www.youtube.com/c/GoIT"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <svg class="footer-social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-youtube"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
-          <li class="footer-socials-item">
-            <a
-              class="footer-socials-link"
               href="https://www.youtube.com/c/GoIT"
               target="_blank"
               rel="noopener noreferrer"
@@ -97,10 +48,6 @@
         </ul>
       </div>
 
-      <div class="footer-headline-subscribe">
-        <p class="footer-headline">
-          Transforming your <em>body</em> shape with us
-        </p>
       <div class="footer-headline-subscribe">
         <p class="footer-headline">
           Transforming your <em>body</em> shape with us
@@ -114,18 +61,12 @@
           <form class="footer-form js-form">
             <input
               class="footer-input"
-              pattern="^\w+(.\w+)?@[a-zA-Z_]+?.[a-zA-Z]{2,3}$"
+              pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
               type="email"
               name="email"
               placeholder="Email"
               required
             />
-
-            <button class="btn-subscribe" type="submit">Send</button>
-          </form>
-        </div>
-      </div>
-    </div>
             <button class="btn-subscribe" type="submit">Send</button>
           </form>
         </div>
@@ -134,27 +75,14 @@
 
     <div class="footer-bottom">
       <p>Your Energy. All rights reserved.</p>
-    <div class="footer-bottom">
-      <p>Your Energy. All rights reserved.</p>
-
       <div>
         <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
-      <div>
-        <a href="#" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
-
         <span>/</span>
-        <span>/</span>
-
-        <a href="#" target="_blank">Terms of Service</a>
+        <a href="#" target="_blank" rel="noopener noreferrer"
+          >Terms of Service</a
+        >
       </div>
-        <a href="#" target="_blank">Terms of Service</a>
-      </div>
-
-      <p>©2023</p>
-    </div>
-  </div>
       <p>©2023</p>
     </div>
   </div>
 </footer>
-
