fix icon pathes. formatting

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -8,7 +8,7 @@
         aria-label="YOUR ENERGY"
       >
         <svg width="132" height="24">
-          <use href="./img/logo.svg"></use>
+          <use href="./img/sprite.svg#logo"></use>
         </svg>
       </a>
       <ul class="menu-items">
@@ -28,7 +28,7 @@
             aria-label="Link to Facebook"
           >
             <svg width="28" height="28">
-              <use href="./img/header/icons.svg#facebook"></use>
+              <use href="./img/sprite.svg#icon-facebook"></use>
             </svg>
           </a>
         </li>
@@ -40,7 +40,7 @@
             aria-label="Link to Instagram"
           >
             <svg width="28" height="28">
-              <use href="./img/header/icons.svg#instagram"></use>
+              <use href="./img/sprite.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
@@ -52,14 +52,14 @@
             aria-label="Link to Youtube"
           >
             <svg width="28" height="28">
-              <use href="./img/header/icons.svg#youtube"></use>
+              <use href="./img/sprite.svg#icon-youtube"></use>
             </svg>
           </a>
         </li>
       </ul>
       <button type="button" class="menu-btn" onclick="">
         <svg width="32" height="32">
-          <use href="./img/header/icons.svg#menu"></use>
+          <use href="./img/sprite.svg#burger-menu"></use>
         </svg>
       </button>
     </nav>
