--- a/src/partials/quote.html
+++ b/src/partials/quote.html
@@ -41,7 +41,7 @@
 
   <div class="box2-info">
     <svg class="news-icon">
-      <use href="./img/sprite.svg#fluent_food"></use>
+      <use href="./img/sprite.svg#icon-running-man"></use>
     </svg>
     <div class="box2-info-content">
       <h3 class="time-info-title">110 min</h3>
