--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
       <div class="footer-branding">
         <a class="footer-logo" href="../index.html">
           <svg class="footer-logo-icon" width="132" height="24">
-            <use href="../img/sprite.svg#logo"></use>
+            <use href="./img/sprite.svg#logo"></use>
           </svg>
         </a>
 
@@ -17,7 +17,7 @@
               rel="noopener noreferrer"
             >
               <svg class="footer-social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-facebook"></use>
+                <use href="./img/sprite.svg#icon-facebook"></use>
               </svg>
             </a>
           </li>
@@ -29,7 +29,7 @@
               rel="noopener noreferrer"
             >
               <svg class="footer-social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-instagram"></use>
+                <use href="./img/sprite.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
@@ -41,7 +41,7 @@
               rel="noopener noreferrer"
             >
               <svg class="footer-social-icon" width="24" height="24">
-                <use href="../img/sprite.svg#icon-youtube"></use>
+                <use href="./img/sprite.svg#icon-youtube"></use>
               </svg>
             </a>
           </li>
