--- a/src/css/filtered-exercises.css
+++ b/src/css/filtered-exercises.css
@@ -1,23 +1,23 @@
-.hide {
+/* .hide {
   opacity: 0;
   transition: opacity 0.5s ease-in-out, visibility 0.5s ease;
   position: absolute;
 
-}
+} */
 
 .hide-show-transition {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-  transition: opacity 0.3s ease, visibility 0.3s ease;
-}
+  transition: opacity 0.5s ease-in-out, visibility 0.5s ease;
+  position: relative;}
 
 .hide-show-transition.hide {
-  opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease;
   position: absolute;
-
 }
 
 /* List styles */
