--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -29,6 +29,7 @@
 .footer-logo {
   display: inline-block;
   color: rgba(244, 244, 244, 1);
+  transition: color 0.3s ease;
 
   padding: 5px 0;
   margin-bottom: 20px;
@@ -36,6 +37,11 @@
   @media screen and (min-width: 768px) {
     margin-bottom: 32px;
   }
+}
+
+.footer-logo:hover,
+.footer-logo:focus {
+  transform: scale(1.1); 
 }
 
 .footer-logo-icon {
@@ -53,14 +59,33 @@
   border-radius: 10px;
 
   padding: 8px;
+
+  transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
 .footer-socials-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: rgba(244, 244, 244, 1);
+  transition: color 0.3s ease;
 }
 
 .footer-social-icon {
   fill: currentColor;
+  transition: transform 0.3s ease, fill 0.3s ease;
+}
+
+.footer-socials-item:hover .footer-social-icon,
+.footer-socials-item:focus .footer-social-icon {
+  fill:var(--primary); 
+  transform: scale(1.1); 
+}
+
+.footer-socials-item:hover,
+.footer-socials-item:focus {
+  background-color: rgba(244, 244, 244, 1);
+  transform: scale(1.1); 
 }
 
 .footer-headline-subscribe {
