--- a/src/css/burger-menu.css
+++ b/src/css/burger-menu.css
@@ -3,14 +3,13 @@
   top: 0;
   right: 0;
   width: 210px;
-  height: 812px;
+  height: 100vh;
   background-color: #242424;
   transform: translateX(100%);
   transition: var(--transition);
   padding: 20px;
   display: flex;
   flex-direction: column;
-
   z-index: 1000;
 }
 
