--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -56,10 +56,10 @@
 .exercises-container {
   gap: 32px;
   display: flex;
+  overflow: hidden;
 }
 
 .exercises-info {
-  min-width: 444px;
   gap: 32px;
   display: flex;
   flex-direction: column;
@@ -289,6 +289,7 @@
 .text-info {
   overflow: hidden;
   display: -webkit-box;
+  line-clamp: 5;
   -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   font-size: 14px;
