--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -9,7 +9,14 @@
       <span class="breadcrumb-current"></span>
     </div>
 
+<div class="filter-search-wrapper">
+    <div class="search-wrapper hide-show-transition hide">
+      <label class="search-label" for="exercises-filter"></label>
+      <input type="text" class="search-input hide" id="exercises-filter" placeholder="Search exercises..." />
+    </div>
+
     <ul class="exercises-categories"></ul>
+  </div>
   </div>
 
   <div class="exercises-container">
