--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -7,11 +7,45 @@
 }
 
 .exercises-header {
-  display: flex;
-  align-items: end;
   justify-content: space-between;
-}
+  display: flex;
+  flex-direction: column;
 
+ 
+}
+ .filter-search-wrapper {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 12px;
+  }
+  .search-wrapper {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content:stretch;
+  }
+  .search-input {
+    min-width: 208px;
+    width:100%;
+    height: 44px;
+    padding: 0 16px;
+    border-radius: 30px;
+    background-color: var(--white);
+    border: 1px solid rgba(36, 36, 36, 0.5);
+    font-size: 16px;
+    line-height: 24px;
+    color: var(--black);
+    outline: none;
+  }
+  .search-input::placeholder {
+    color: var(--primary);
+  }
+  .search-input:focus {
+    border: 1px solid rgba(36, 36, 36, 0.8);
+    box-shadow: 0px 0px 0px 2px rgba(36, 36, 36, 0.1);
+  }
 .exercises-title {
   font-size: 44px;
   line-height: 48px;
@@ -163,6 +197,11 @@
     padding: 40px;
     gap: 16px;
   }
+  .search-input {
+    min-width: 335px;
+    padding: 0 16px;
+
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -172,7 +211,7 @@
 }
 
 .quote-header {
-  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: space-between;
   fill: var(--primary-light);
