--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -10,10 +10,12 @@
     </div>
 
 <div class="filter-search-wrapper">
-    <div class="search-wrapper hide-show-transition hide">
+    <form class="form-search hide-show-transition hide">
       <label class="search-label" for="exercises-filter"></label>
       <input type="text" class="search-input hide" id="exercises-filter" placeholder="Search exercises..." />
-    </div>
+      <button class="clear-search" type="button" aria-label="Clear search">×</button>
+
+    </form>
 
     <ul class="exercises-categories"></ul>
   </div>
