fromat rest code

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,4 +18,4 @@
 @import './rating-modal.css';
 @import './categories.css';
 @import './filtered-exercises.css';
-@import './breadcrumbs.css'
+@import './breadcrumbs.css';
