--- a/src/css/filtered-exercises.css
+++ b/src/css/filtered-exercises.css
@@ -1,17 +1,20 @@
-
-
 .hide-show-transition {
   opacity: 1;
   visibility: visible;
   pointer-events: auto;
-  transition: opacity 0.5s ease-in-out, visibility 0.5s ease;
-  position: relative;}
+  transition:
+    opacity 0.5s ease-in-out,
+    visibility 0.5s ease;
+  position: relative;
+}
 
 .hide-show-transition.hide {
   visibility: hidden;
   pointer-events: none;
   opacity: 0;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease;
+  transition:
+    opacity 0.3s ease-in-out,
+    visibility 0.3s ease;
   position: absolute;
 }
 
@@ -202,8 +205,6 @@
     .exercise-title {
     font-size: 24px;
   }
-
-
 }
 
 @media screen and (min-width: 1440px) {
@@ -211,7 +212,5 @@
     .filtered-exercises-list {
       grid-template-columns: repeat(auto-fill, minmax(405px, 1fr));
     }
-
- 
   }
 }
