--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -59,7 +59,11 @@
           </p>
 
           <form class="footer-form js-footer-form">
+            <label for="email-input" class="visually-hidden"
+              >Email address</label
+            >
             <input
+              id="email-input"
               class="footer-input"
               pattern="^\w+(\.\w+)?@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$"
               type="email"
