--- a/src/partials/exercises.html
+++ b/src/partials/exercises.html
@@ -10,7 +10,7 @@
     </div>
 
 <div class="filter-search-wrapper">
-    <form class="form-search hide-show-transition hide">
+    <form class="form-search hide-show-transition hide" id="search-form">
       <label class="search-label" for="exercises-filter"></label>
       <input type="text" class="search-input hide" id="exercises-filter" placeholder="Search exercises..." />
       <button class="clear-search" type="button" aria-label="Clear search">×</button>
