--- a/src/css/common.css
+++ b/src/css/common.css
@@ -7,6 +7,7 @@ body {
   overflow-x: hidden;
 }
 
+
 html {
   overflow-x: hidden;
   scrollbar-width: none;
@@ -113,36 +114,17 @@ html {
   }
 }
 
-.modal-overlay {
-  background-color: rgba(var(--rgba-bg-color), 0.4);
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  overflow: auto;
-  opacity: 0;
-  pointer-events: none;
-  transition: var(--transition);
-}
+
 .exercise-modal-descr {
   max-height: 80px;
   overflow-y: auto;
   line-height: 1.3em;
 }
 .exercise-modal-descr p {
-  margin: 0;
     font-size: 12px;
-    line-height: 1.5em;
-}
-
-.modal-overlay.is-open {
-  opacity: 1;
-  pointer-events: auto;
+    line-height: 1.3em;
+    font-weight: 400;
+    text-overflow: clip;
 }
 
 .close-modal-btn {
@@ -181,3 +163,36 @@ html {
     height: 28px;
   }
 }
+
+.modal-overlay {
+  background-color: rgba(var(--rgba-black), 0.4);
+  overflow-y: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 999;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: var(--transition);
+}
+
+
+body.modal-open, body.sidebar-open {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+
+  /* z-index: 9999; */
+}
+
+.modal-overlay.modal-open {
+  opacity: 1;
+  pointer-events: auto;
+}
+
