--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,6 @@
 @import 'modern-normalize/modern-normalize.css';
 @import 'izitoast/dist/css/iziToast.min.css';
-@import './common.css';
+
 @import './font.css';
 @import './variables.css';
 @import './reset.css';
@@ -18,4 +18,5 @@
 @import './rating-modal.css';
 @import './categories.css';
 @import './filtered-exercises.css';
-@import './breadcrumbs.css'
+@import './breadcrumbs.css';
+@import './common.css';
