--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -5,65 +5,67 @@
   margin-bottom: 132px;
   flex-direction: column;
 }
+.exercises.container{
+  margin-top: 64px;
+  margin-bottom: 132px;
+}
 
 .exercises-header {
   justify-content: space-between;
   display: flex;
   flex-direction: column;
-
- 
 }
- .filter-search-wrapper {
-    flex: 1;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    gap: 12px;
-  }
-  .form-search  {
-    position: relative;
-    flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content:stretch;
-    padding-right: 30px;
-  }
-  .search-input {
-    padding-right: 30px;
+.filter-search-wrapper {
+  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 12px;
+}
+.form-search {
+  position: relative;
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: stretch;
+  padding-right: 30px;
+}
+.search-input {
+  padding-right: 30px;
 
-    min-width: 300px;
-    width:100%;
-    height: 44px;
-    padding: 0 16px;
-    border-radius: 30px;
-    background-color: var(--white);
-    border: 1px solid rgba(36, 36, 36, 0.5);
-    font-size: 16px;
-    line-height: 24px;
-    color: var(--black);
-    outline: none;
-  }
+  min-width: 300px;
+  width: 100%;
+  height: 44px;
+  padding: 0 16px;
+  border-radius: 30px;
+  background-color: var(--white);
+  border: 1px solid rgba(36, 36, 36, 0.5);
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--black);
+  outline: none;
+}
 
-  .clear-search {
-    position: absolute;
-    right: 8px;
-    top: 50%;
-    transform: translateY(-50%);
-    background: none;
-    border: none;
-    font-size: 18px;
-    cursor: pointer;
-    display: none;
-    color: #666;
-  }
+.clear-search {
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: none;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
+  display: none;
+  color: #666;
+}
 
-  .search-input::placeholder {
-    color: var(--primary);
-  }
-  .search-input:focus {
-    border: 1px solid rgba(36, 36, 36, 0.8);
-    box-shadow: 0px 0px 0px 2px rgba(36, 36, 36, 0.1);
-  }
+.search-input::placeholder {
+  color: var(--primary);
+}
+.search-input:focus {
+  border: 1px solid rgba(36, 36, 36, 0.8);
+  box-shadow: 0px 0px 0px 2px rgba(36, 36, 36, 0.1);
+}
 .exercises-title {
   font-size: 44px;
   line-height: 48px;
@@ -218,7 +220,6 @@
   .search-input {
     min-width: 335px;
     padding: 0 16px;
-
   }
 }
 
