fixing the link to ./public/favorites

--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -8,9 +8,8 @@
 
     <nav class="menu">
       <a href="./index.html">Home</a>
-      <a href="./partials/favorites.html">Favorites</a>
+      <a href="./public/favorites.html">Favorites</a>
     </nav>
-
     <ul class="soc-items white">
       <li class="soc-item white">
         <a
