--- a/src/partials/burger-menu.html
+++ b/src/partials/burger-menu.html
@@ -10,6 +10,7 @@
       <a href="./index.html">Home</a>
       <a href="./favorites.html">Favorites</a>
     </nav>
+
     <ul class="soc-items white">
       <li class="soc-item white">
         <a
@@ -52,5 +53,5 @@
       </li>
     </ul>
   </div>
-  <div class="modal-overlay-brg"></div>
+  <div class="modal-overlay"></div>
 </section>
