--- a/src/css/filtered-exercises.css
+++ b/src/css/filtered-exercises.css
@@ -38,7 +38,6 @@
     flex-direction: column;
     justify-content: space-between;
     transition: transform 0.2s;
-    cursor: pointer;
 
     &:hover {
       transform: translateY(-5px);
@@ -77,7 +76,7 @@
         justify-content: space-between;
         background: transparent;
         border: none;
-        font-weight: 300;
+        font-weight: 400;
         cursor: pointer;
         display: inline-flex;
         align-items: center;
@@ -159,11 +158,10 @@
     border: 1px solid transparent;
     margin: 0 2px;
     cursor: pointer;
-    transition: color 0.3s ease-in-out;
+    transition: var(--transition);
 
     &:hover:not(:disabled) {
       border: 1px solid var(--primary);
-      color: var(--primary);
     }
 
     &.active {
