--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -59,7 +59,7 @@
           </p>
 
           <form class="footer-form js-footer-form">
-            <label for="email-input" class="visually-hidden" hidden
+            <label for="email-input" class="visually-hidden"
               >Email address</label
             >
             <input
